manifests/api/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-api
  labels:
    name: store-api
spec:
  ports:
    - port: 8080
      name: nginx
  selector:
    app: store-api
