manifests/api/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: store-api
  labels:
    name: store-api
spec:
  host: "open-store-management.apps.hiybv6c8.eastus.aroapp.io"
  path: "/api"
  to:
    kind: Service
    name: store-api
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
